--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "christopherlam790.github.io",
-  "homepage": "https://christopherlam790.github.io/christopherlam-portfolio-website/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-toast": "^1.2.15",
